--- a/src/estilos.css
+++ b/src/estilos.css
@@ -35,7 +35,7 @@ h1 {
 
 #tablero {
   display: grid;
-  margin: 1rem;
+  margin: 2rem;
   grid-template-columns: repeat(3, 1fr);
   gap: 1rem;
   align-items: center;
@@ -70,22 +70,31 @@ h1 {
   padding: 2rem;
 }
 
-button {
+button,
+#boton-filtro,
+#nueva-busqueda {
   padding: 12px 24px;
   background-color: var(--color-primary);
   color: #fff;
   cursor: pointer;
+  display: inline;
   border: none;
   border-radius: 4px;
-  /**/
   font-size: 16px;
   font-weight: bold;
   text-align: center;
   text-decoration: none;
   transition: background-color 0.3s ease;
+  margin: 0.5rem;
 }
-button:hover {
+button:hover,
+#boton-filtro:hover,
+#nueva-busqueda:hover {
   background-color: var(--color-secondary);
+}
+
+.busqueda {
+  margin: 1rem;
 }
 
 a {
