--- a/src/estilos.css
+++ b/src/estilos.css
@@ -71,8 +71,7 @@ h1 {
 }
 
 button,
-#boton-filtro,
-#nueva-busqueda {
+#boton-filtro {
   padding: 12px 24px;
   background-color: var(--color-primary);
   color: #fff;
@@ -88,8 +87,7 @@ button,
   margin: 0.5rem;
 }
 button:hover,
-#boton-filtro:hover,
-#nueva-busqueda:hover {
+#boton-filtro:hover {
   background-color: var(--color-secondary);
 }
 
